<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgBookPicture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btnAddToCurrentlyReading"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/btn_currently_reading"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnAddToWantToRead"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_your_wish_list"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/btnAddToCurrentlyReading" />

            <Button
                android:id="@+id/btnAddToAlreadyRead"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_already_read"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/btnAddToWantToRead" />

            <Button
                android:id="@+id/btnAddToFavorites"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/add_to_fav"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/btnAddToAlreadyRead" />

            <TextView
                android:id="@+id/txtBookNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/book_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <TextView
                android:id="@+id/txtBookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                app:layout_constraintBottom_toBottomOf="@+id/txtBookNameLabel"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/txtBookNameLabel" />

            <TextView
                android:id="@+id/txtAuthorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/book_author"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/txtBookNameLabel" />

            <TextView
                android:id="@+id/txtAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                app:layout_constraintBottom_toBottomOf="@+id/txtAuthorLabel"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/txtAuthorLabel" />

            <TextView
                android:id="@+id/txtPageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/book_pages"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/txtAuthorLabel" />

            <TextView
                android:id="@+id/txtDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/book_desc"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/txtPageLabel" />

            <TextView
                android:id="@+id/txtDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/book_desc_filler"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/txtDescriptionLabel" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="270dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="100dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="14dp" />

            <TextView
                android:id="@+id/txtPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                app:layout_constraintBottom_toBottomOf="@+id/txtPageLabel"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/txtPageLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</RelativeLayout>